--- a/spring-cloud-client-b/src/main/java/config/application.yml
+++ b/spring-cloud-client-b/src/main/java/config/application.yml
@@ -1,11 +1,9 @@
+server:
+  port: 8886
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8888/eureka/
-server:
-  port: 8880
-#  port: 8881
-#  port: 8882
 spring:
   application:
-    name: client-a
+    name: client-b
