--- a/spring-cloud-client-b/src/main/java/config/application.yml
+++ b/spring-cloud-client-b/src/main/java/config/application.yml
@@ -7,3 +7,9 @@ eureka:
 spring:
   application:
     name: client-b
+  sleuth:
+    sampler:
+      percentage: 1
+  zipkin:
+    baseUrl: http://localhost:2222
+    enabled: true
